@@ -20,6 +20,7 @@ btsync-gui (0.7-1) unstable; urgency=low
     - Disabled local file system checks on remote connections
     - Disabled folder open functions on remote connections
   * Added Web UI menu entry for advanced users (Closes #89)
+  * Added forum link menu entry (Closes #90)
 
  -- Leo Moll <leo.moll@yeasoft.com>  Sun, 02 Mar 2014 15:33:21 +0100
 
